--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav class="nav">
         <div class="nav-menu flex-row">
             <div class="nav-brand">
-                <a href="#" class="text-gray">We Hear</a>
+                <a href="#" class="text-gray">We Here</a>
             </div>
             <div class="toggle-collapse">
                 <div class="toggle-icons">
