--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <section class="site-title">
             <div class="site-background" data-aos="fade-up" data-aos-delay="100">
                 <h3>We Here</h3>
-                <h1>A place where we hear you.</h1>
+                <h1>A place where we are here to hear you out</h1>
                 <button class="btn">Come Vent Out or just talk to us</button>
             </div>
         </section>
